feat: add album img

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <div id="trackInfo">
       <h2 id="trackTitle"></h2>
+      <img id="albumImg">
       <audio id="audioPlayer" controls></audio>
     </div>
 
