--- a/index.html
+++ b/index.html
@@ -7,23 +7,28 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+<div class="container">
+  <div class="subcontainer">
     <h1>Busca una canción en Deezer</h1>
-
     <input
-      type="text"
-      id="searchInput"
-      placeholder="Ingrese el título de la canción"
-    />
-    
-    <input
-    type="number"
-    id="limitInput"
-    placeholder="Canciones a buscar"
-    min="1"
+    type="text"
+    id="searchInput"
+    placeholder="Ingrese el título de la canción"
   />
+  
+  <input
+  type="number"
+  id="limitInput"
+  placeholder="Canciones a buscar"
+  min="1"
+/>
 
 
-    <button onclick="searchTrack()">Buscar</button>
+  <button onclick="searchTrack()">Buscar</button>
+  </div>
+</div>
+
+   
 
 
 
