--- a/login.html
+++ b/login.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container">
+      <div class="container" style="margin-top: 50px;">
       <form action="" method="post" onsubmit="return false;">
         <input type="email" name="email" id="email" required>
         <input type="password" name="pass" id="pass" required>
-        <button id="registerBtn">Enviar</button>
+        <button id="registerBtn">Sign Up</button>
+        <button id="loginBtn">Login</button>
+        <button id="statusBtn">Ver usuario logueado</button>
       </form>
     </div>
     <script type="module" src="firebaseApi.js"></script>
