--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
         <button id="registerBtn">Sign Up</button>
         <button id="loginBtn">Login</button>
         <button id="statusBtn">Ver usuario logueado</button>
+        <button id="logoutBtn">Logout</button>
       </form>
     </div>
     <script type="module" src="firebaseApi.js"></script>
