--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    
+    <nav>
+    <a href="Login.html">Login</a>
+  </nav>
+  
 <div class="container">
   <div class="subcontainer">
     <h1>Busca una canción en Deezer</h1>
