--- a/login.html
+++ b/login.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+<nav>
+  <a href="index.html">Index</a>
+</nav>
+
       <div class="container" style="margin-top: 50px;">
       <form action="" method="post" onsubmit="return false;">
         <input type="email" name="email" id="email" required>
