separacion por carpetas

--- a/Login/login.html
+++ b/Login/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vinillum</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Styles/style.css">
   </head>
   <body>
 <nav>
-  <a href="index.html">Index</a>
+  <a href="../index.html">Index</a>
 </nav>
 
       <div class="container" style="margin-top: 50px;">
@@ -21,6 +21,6 @@
         <button id="logoutBtn">Logout</button>
       </form>
     </div>
-    <script type="module" src="firebaseApi.js"></script>
+    <script type="module" src="../Scripts/firebaseApi.js"></script>
   </body>
 </html>
