--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vinillum</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Styles/style.css">
   </head>
   <body>
     
     <nav>
-    <a href="Login.html">Login</a>
+    <a href="Login/login.html">Login</a>
   </nav>
   
 <div class="container">
@@ -41,6 +41,6 @@
 
     <div id="tracksList"></div>
 
-    <script src="script.js"></script>
+    <script src="Scripts/script.js"></script>
   </body>
 </html>
