--- a/TrackInfo/trackInfo.html
+++ b/TrackInfo/trackInfo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detalles del Track</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Styles/style.css">
 </head>
 <body>
     <div class="container">
@@ -15,7 +15,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../Scripts/script.js"></script>
 
 </body>
 </html>
